# Mamba architecture tests (smoke: import and arch registration).

load(
    "//bazel:api.bzl",
    "modular_py_test",
    "requirement",
)

package(default_visibility = [
    "//:__pkg__",
    "//SDK/integration-test:__subpackages__",
    "//max/tests:__subpackages__",
    "//oss/modular/max/tests:__subpackages__",
])

modular_py_test(
    name = "mamba",
    timeout = "long",
    srcs = glob(["test_*.py"]),
    mojo_deps = ["//max:MOGGKernelAPI"],
    deps = [
        "//max/python/max/driver",
        "//max/python/max/dtype",
        "//max/python/max/engine",
        "//max/python/max/graph",
        "//max/python/max/mlir",
        "//max/python/max/nn",
        "//max/python/max/pipelines/architectures",
        requirement("numpy"),
    ],
)
