# Mamba architecture tests (smoke: import and arch registration).

load(
    "//bazel:api.bzl",
    "modular_py_test",
)

package(default_visibility = [
    "//:__pkg__",
    "//SDK/integration-test:__subpackages__",
    "//max/tests:__subpackages__",
    "//oss/modular/max/tests:__subpackages__",
])

modular_py_test(
    name = "mamba",
    timeout = "long",
    srcs = glob(["test_*.py"]),
    deps = [
        "//max/python/max/pipelines/architectures",
    ],
)
